[package]
name = "ragnarok"
version = "0.3.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["rustls-tls", "cookies", "socks"], default-features = false }
clap = { version = "4", features = ["derive"] }
indicatif = { version = "0.17", features = ["tokio"] }
colored = "2"
futures = "0.3"
anyhow = "1"
dashmap = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-stream = "0.1"
